# DTunes

./: .README.md.swp  .gitignore  .main.c.swp  Cargo.toml  LICENSE  Makefile  README.md  a.out  banner.txt  dtunes  index.html  install.sh  main.c  package-lock.json  package.json  tailwind.config.js  test.c
assets/: create_song-NQhYS0Zt.webm  index-B7Ao6qUs.js  index-BBtPud3v.js  index-BLd0UJ1E.css  index-BbTj5nvr.css  index-Bffy2dyb.js  index-Bk13w9-n.css  index-BziH0tgi.css  index-CtYqmfRV.js  index-D6nS581T.css  index-DCrxOcjC.css  index-Dv8fqzcI.js  index-DxNkY2nu.js  index-t43dcE1q.js  pomodoro_sessions-sS4iAunF.webm
audiofile/: .song.c.swp  .song.h.swp  docs.md  song.c  song.h  song_endpoints.c  song_endpoints.h  song_test.c  song_test.h
collection/: .Makefile.swp  .audio_file.c.swp  .collection.c.swp  .collection.h.swp  Makefile  audio_file.c  audio_file.h  collection.c  collection.h  collection_endpoints.c  collection_endpoints.h  collection_test.c  collection_test.h  collections  main.c
config/: data_sources.yaml  playlist.yml  preprocess.yml  sources.yaml
db/: .db.c.swp  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artist.rs  audio_file.rs  genre.rs  lib.rs  main.rs  playlist.rs  pomodoro.rs
src-tauri/src/dtunes_api/: artist.rs  audio_file.rs  genre.rs  mod.rs  playlist.rs  pomodoro.rs
src-tauri/src/handlers/: artist.rs  audio_file.rs  genre.rs  mod.rs  player.rs  playlist.rs  pomodoro.rs
src-tauri/tests/: artist_tests.rs  audio_file_tests.rs  genre_tests.rs  playlist_tests.rs  pomodoro_tests.rs
(+337 files in other folders)
