[package]
name = "dtunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1"
rusqlite="0.28.0"
chrono="0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.2.8", features = ["derive"] } 
