[package]
name = "dtunes-audio-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dtunes_audio_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
rusqlite = { version = "0.32.1" , features= ["bundled] }
tauri-plugin-dialog = "2"
directories = "5.0.1"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-localhost = "2"
base64 = "0.22.1"
symphonia = "0.5"
mp4 = "0.14.0"
mp3-duration = "0.1.10"
uuid = "1.11.0"
